--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -719,6 +719,9 @@ video {
 .h-96 {
 	height: 24rem;
 }
+.h-48 {
+	height: 12rem;
+}
 .w-full {
 	width: 100%;
 }
@@ -818,10 +821,6 @@ video {
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.border-indigo-800 {
-	--tw-border-opacity: 1;
-	border-color: rgba(55, 48, 163, var(--tw-border-opacity));
 }
 .border-indigo-500 {
 	--tw-border-opacity: 1;
@@ -980,10 +979,6 @@ video {
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
-.py-1 {
-	padding-top: 0.25rem;
-	padding-bottom: 0.25rem;
-}
 .px-1 {
 	padding-left: 0.25rem;
 	padding-right: 0.25rem;
@@ -995,6 +990,10 @@ video {
 .py-5 {
 	padding-top: 1.25rem;
 	padding-bottom: 1.25rem;
+}
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
 }
 .px-5 {
 	padding-left: 1.25rem;
@@ -1290,8 +1289,64 @@ video {
 		height: 100vh;
 	}
 
+	.md\:h-52 {
+		height: 13rem;
+	}
+
+	.md\:h-80 {
+		height: 20rem;
+	}
+
+	.md\:h-96 {
+		height: 24rem;
+	}
+
+	.md\:h-1\/3 {
+		height: 33.333333%;
+	}
+
+	.md\:h-1\/2 {
+		height: 50%;
+	}
+
+	.md\:h-2\/3 {
+		height: 66.666667%;
+	}
+
+	.md\:h-1\.5 {
+		height: 0.375rem;
+	}
+
+	.md\:h-1 {
+		height: 0.25rem;
+	}
+
+	.md\:h-3\/4 {
+		height: 75%;
+	}
+
 	.md\:w-16 {
 		width: 4rem;
+	}
+
+	.md\:max-w-3xl {
+		max-width: 48rem;
+	}
+
+	.md\:max-w-4xl {
+		max-width: 56rem;
+	}
+
+	.md\:max-w-2xl {
+		max-width: 42rem;
+	}
+
+	.md\:max-w-6xl {
+		max-width: 72rem;
+	}
+
+	.md\:max-w-5xl {
+		max-width: 64rem;
 	}
 
 	.md\:grid-cols-3 {
