--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -628,10 +628,6 @@ video {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
-.my-3 {
-	margin-top: 0.75rem;
-	margin-bottom: 0.75rem;
-}
 .ml-2 {
 	margin-left: 0.5rem;
 }
@@ -718,9 +714,6 @@ video {
 }
 .h-96 {
 	height: 24rem;
-}
-.h-48 {
-	height: 12rem;
 }
 .w-full {
 	width: 100%;
@@ -825,6 +818,10 @@ video {
 .border-indigo-500 {
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
+}
+.border-black {
+	--tw-border-opacity: 1;
+	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 .border-green-800 {
 	--tw-border-opacity: 1;
@@ -1245,6 +1242,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.hover\:bg-indigo-300:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
+}
 .hover\:bg-opacity-100:hover {
 	--tw-bg-opacity: 1;
 }
@@ -1289,60 +1290,12 @@ video {
 		height: 100vh;
 	}
 
-	.md\:h-52 {
-		height: 13rem;
-	}
-
-	.md\:h-80 {
-		height: 20rem;
-	}
-
-	.md\:h-96 {
-		height: 24rem;
-	}
-
-	.md\:h-1\/3 {
-		height: 33.333333%;
-	}
-
-	.md\:h-1\/2 {
-		height: 50%;
-	}
-
-	.md\:h-2\/3 {
-		height: 66.666667%;
-	}
-
-	.md\:h-1\.5 {
-		height: 0.375rem;
-	}
-
-	.md\:h-1 {
-		height: 0.25rem;
-	}
-
-	.md\:h-3\/4 {
-		height: 75%;
-	}
-
 	.md\:w-16 {
 		width: 4rem;
 	}
 
-	.md\:max-w-3xl {
-		max-width: 48rem;
-	}
-
-	.md\:max-w-4xl {
-		max-width: 56rem;
-	}
-
 	.md\:max-w-2xl {
 		max-width: 42rem;
-	}
-
-	.md\:max-w-6xl {
-		max-width: 72rem;
 	}
 
 	.md\:max-w-5xl {
