--- a/public/packages/assets/css/styles.css
+++ b/public/packages/assets/css/styles.css
@@ -560,6 +560,9 @@ video {
 .relative {
 	position: relative;
 }
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -572,13 +575,13 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
-.my-5 {
-	margin-top: 1.25rem;
-	margin-bottom: 1.25rem;
-}
 .mx-10 {
 	margin-left: 2.5rem;
 	margin-right: 2.5rem;
+}
+.my-5 {
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }
 .mt-10 {
 	margin-top: 2.5rem;
@@ -607,11 +610,23 @@ video {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .mb-4 {
 	margin-bottom: 1rem;
 }
-.mb-2 {
-	margin-bottom: 0.5rem;
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mt-4 {
+	margin-top: 1rem;
+}
+.mt-6 {
+	margin-top: 1.5rem;
+}
+.ml-4 {
+	margin-left: 1rem;
 }
 .flex {
 	display: flex;
@@ -637,6 +652,9 @@ video {
 .h-5 {
 	height: 1.25rem;
 }
+.h-72 {
+	height: 18rem;
+}
 .h-80 {
 	height: 20rem;
 }
@@ -645,12 +663,6 @@ video {
 }
 .h-8 {
 	height: 2rem;
-}
-.h-60 {
-	height: 15rem;
-}
-.h-72 {
-	height: 18rem;
 }
 .h-96 {
 	height: 24rem;
@@ -673,11 +685,23 @@ video {
 .max-w-6xl {
 	max-width: 72rem;
 }
+.max-w-none {
+	max-width: none;
+}
 .flex-1 {
 	flex: 1 1 0%;
 }
+.list-inside {
+	list-style-position: inside;
+}
+.list-decimal {
+	list-style-type: decimal;
+}
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-3 {
+	grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col-reverse {
 	flex-direction: column-reverse;
@@ -821,17 +845,21 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-gray-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-black {
+.bg-gray-300 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
-.bg-gray-400 {
+.bg-gray-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
@@ -918,6 +946,10 @@ video {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 }
+.py-5 {
+	padding-top: 1.25rem;
+	padding-bottom: 1.25rem;
+}
 .pt-2 {
 	padding-top: 0.5rem;
 }
@@ -938,6 +970,9 @@ video {
 }
 .pt-5 {
 	padding-top: 1.25rem;
+}
+.pb-8 {
+	padding-bottom: 2rem;
 }
 .text-center {
 	text-align: center;
@@ -1011,6 +1046,12 @@ video {
 .tracking-tight {
 	letter-spacing: -0.025em;
 }
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
+.tracking-normal {
+	letter-spacing: 0em;
+}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -1046,6 +1087,22 @@ video {
 .text-gray-400 {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+.text-indigo-500 {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+.text-indigo-300 {
+	--tw-text-opacity: 1;
+	color: rgba(165, 180, 252, var(--tw-text-opacity));
+}
+.text-gray-300 {
+	--tw-text-opacity: 1;
+	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1099,13 +1156,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(30, 64, 175, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-50:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .hover\:bg-gray-500:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
+.hover\:bg-gray-50:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
 	--tw-text-opacity: 1;
@@ -1140,6 +1197,11 @@ video {
 
 	.sm\:rounded-lg {
 		border-radius: 0.5rem;
+	}
+
+	.sm\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
 	}
 }
 @media (min-width: 768px) {
@@ -1244,5 +1306,13 @@ video {
 	.md\:text-white {
 		--tw-text-opacity: 1;
 		color: rgba(255, 255, 255, var(--tw-text-opacity));
+	}
+}
+@media (min-width: 1024px) {
+
+	.lg\:space-y-9 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-y-reverse: 0;
+		margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
+		margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
 	}
 }
