--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -596,6 +596,9 @@ video {
 .z-10 {
 	z-index: 10;
 }
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -674,6 +677,15 @@ video {
 }
 .mt-36 {
 	margin-top: 9rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mt-2 {
+	margin-top: 0.5rem;
+}
+.mt-6 {
+	margin-top: 1.5rem;
 }
 .flex {
 	display: flex;
@@ -777,11 +789,20 @@ video {
 .max-w-sm {
 	max-width: 24rem;
 }
+.max-w-none {
+	max-width: none;
+}
 .flex-1 {
 	flex: 1 1 0%;
 }
 .cursor-pointer {
 	cursor: pointer;
+}
+.list-inside {
+	list-style-position: inside;
+}
+.list-decimal {
+	list-style-type: decimal;
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -812,11 +833,6 @@ video {
 }
 .gap-2 {
 	gap: 0.5rem;
-}
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
@@ -899,9 +915,6 @@ video {
 .border-b-2 {
 	border-bottom-width: 2px;
 }
-.border-t {
-	border-top-width: 1px;
-}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -925,10 +938,6 @@ video {
 .border-gray-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
-.border-gray-800 {
-	--tw-border-opacity: 1;
-	border-color: rgba(31, 41, 55, var(--tw-border-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -1006,10 +1015,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
-.bg-red-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
@@ -1017,6 +1022,10 @@ video {
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-red-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
 }
 .bg-gray-50 {
 	--tw-bg-opacity: 1;
@@ -1148,13 +1157,13 @@ video {
 	padding-left: 5rem;
 	padding-right: 5rem;
 }
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-}
 .py-20 {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
+}
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }
 .py-24 {
 	padding-top: 6rem;
@@ -1168,6 +1177,9 @@ video {
 }
 .pb-5 {
 	padding-bottom: 1.25rem;
+}
+.pt-3 {
+	padding-top: 0.75rem;
 }
 .pt-5 {
 	padding-top: 1.25rem;
@@ -1189,6 +1201,9 @@ video {
 }
 .pl-2 {
 	padding-left: 0.5rem;
+}
+.pb-8 {
+	padding-bottom: 2rem;
 }
 .text-center {
 	text-align: center;
@@ -1262,6 +1277,9 @@ video {
 .tracking-wide {
 	letter-spacing: 0.025em;
 }
+.tracking-normal {
+	letter-spacing: 0em;
+}
 .text-blue-800 {
 	--tw-text-opacity: 1;
 	color: rgba(30, 64, 175, var(--tw-text-opacity));
@@ -1314,6 +1332,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.text-indigo-600 {
+	--tw-text-opacity: 1;
+	color: rgba(79, 70, 229, var(--tw-text-opacity));
+}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -1325,10 +1347,6 @@ video {
 .text-indigo-100 {
 	--tw-text-opacity: 1;
 	color: rgba(224, 231, 255, var(--tw-text-opacity));
-}
-.text-indigo-600 {
-	--tw-text-opacity: 1;
-	color: rgba(79, 70, 229, var(--tw-text-opacity));
 }
 .text-blue-500 {
 	--tw-text-opacity: 1;
@@ -1432,13 +1450,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
 }
-.hover\:bg-red-500:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-}
 .hover\:bg-gray-500:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
+}
+.hover\:bg-red-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .hover\:bg-gray-50:hover {
 	--tw-bg-opacity: 1;
@@ -1458,14 +1476,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
-.hover\:text-gray-500:hover {
-	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.hover\:text-gray-600:hover {
-	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
 .hover\:text-gray-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
@@ -1478,6 +1488,11 @@ video {
 
 	.sm\:rounded-lg {
 		border-radius: 0.5rem;
+	}
+
+	.sm\:text-base {
+		font-size: 1rem;
+		line-height: 1.5rem;
 	}
 }
 @media (min-width: 768px) {
@@ -1668,6 +1683,12 @@ video {
 
 	.lg\:justify-start {
 		justify-content: flex-start;
+	}
+
+	.lg\:space-y-9 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-y-reverse: 0;
+		margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
+		margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
 	}
 
 	.lg\:text-lg {
