--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -596,9 +596,6 @@ video {
 .z-10 {
 	z-index: 10;
 }
-.col-span-2 {
-	grid-column: span 2 / span 2;
-}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -630,14 +627,6 @@ video {
 .my-4 {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-}
-.mx-10 {
-	margin-left: 2.5rem;
-	margin-right: 2.5rem;
-}
-.my-6 {
-	margin-top: 1.5rem;
-	margin-bottom: 1.5rem;
 }
 .ml-2 {
 	margin-left: 0.5rem;
@@ -677,15 +666,6 @@ video {
 }
 .mt-36 {
 	margin-top: 9rem;
-}
-.mt-3 {
-	margin-top: 0.75rem;
-}
-.mt-2 {
-	margin-top: 0.5rem;
-}
-.mt-6 {
-	margin-top: 1.5rem;
 }
 .flex {
 	display: flex;
@@ -735,15 +715,6 @@ video {
 .h-96 {
 	height: 24rem;
 }
-.h-1\/2 {
-	height: 50%;
-}
-.h-72 {
-	height: 18rem;
-}
-.h-36 {
-	height: 9rem;
-}
 .w-full {
 	width: 100%;
 }
@@ -783,35 +754,11 @@ video {
 .max-w-3xl {
 	max-width: 48rem;
 }
-.max-w-md {
-	max-width: 28rem;
-}
-.max-w-sm {
-	max-width: 24rem;
-}
-.max-w-none {
-	max-width: none;
-}
-.flex-1 {
-	flex: 1 1 0%;
-}
 .cursor-pointer {
 	cursor: pointer;
 }
-.list-inside {
-	list-style-position: inside;
-}
-.list-decimal {
-	list-style-type: decimal;
-}
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.flex-col {
-	flex-direction: column;
-}
-.flex-col-reverse {
-	flex-direction: column-reverse;
 }
 .items-center {
 	align-items: center;
@@ -825,50 +772,6 @@ video {
 .justify-end {
 	justify-content: flex-end;
 }
-.justify-around {
-	justify-content: space-around;
-}
-.justify-items-center {
-	justify-items: center;
-}
-.gap-2 {
-	gap: 0.5rem;
-}
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-12 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(3rem * var(--tw-space-y-reverse));
-}
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(1rem * var(--tw-space-x-reverse));
-	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-32 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(8rem * var(--tw-space-x-reverse));
-	margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-	margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .overflow-scroll {
 	overflow: scroll;
 }
@@ -877,9 +780,6 @@ video {
 }
 .overflow-hidden {
 	overflow: hidden;
-}
-.overflow-x-auto {
-	overflow-x: auto;
 }
 .whitespace-nowrap {
 	white-space: nowrap;
@@ -899,9 +799,9 @@ video {
 .rounded-md {
 	border-radius: 0.375rem;
 }
-.rounded-l-full {
-	border-top-left-radius: 9999px;
-	border-bottom-left-radius: 9999px;
+.rounded-t-lg {
+	border-top-left-radius: 0.5rem;
+	border-top-right-radius: 0.5rem;
 }
 .border {
 	border-width: 1px;
@@ -1015,26 +915,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-.bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-.bg-red-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.bg-indigo-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
-}
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
 }
@@ -1047,9 +927,6 @@ video {
 .bg-gradient-to-t {
 	background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
-.bg-gradient-to-b {
-	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .from-gray-100 {
 	--tw-gradient-from: #f3f4f6;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(243, 244, 246, 0));
@@ -1057,10 +934,6 @@ video {
 .from-black {
 	--tw-gradient-from: #000;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(0, 0, 0, 0));
-}
-.from-white {
-	--tw-gradient-from: #fff;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(255, 255, 255, 0));
 }
 .bg-cover {
 	background-size: cover;
@@ -1090,12 +963,6 @@ video {
 }
 .p-5 {
 	padding: 1.25rem;
-}
-.p-6 {
-	padding: 1.5rem;
-}
-.p-3 {
-	padding: 0.75rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
@@ -1157,18 +1024,6 @@ video {
 	padding-left: 5rem;
 	padding-right: 5rem;
 }
-.py-20 {
-	padding-top: 5rem;
-	padding-bottom: 5rem;
-}
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-}
-.py-24 {
-	padding-top: 6rem;
-	padding-bottom: 6rem;
-}
 .pt-4 {
 	padding-top: 1rem;
 }
@@ -1193,26 +1048,11 @@ video {
 .pr-2 {
 	padding-right: 0.5rem;
 }
-.pt-2 {
-	padding-top: 0.5rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
-.pl-2 {
-	padding-left: 0.5rem;
-}
-.pb-8 {
-	padding-bottom: 2rem;
-}
 .text-center {
 	text-align: center;
 }
 .text-left {
 	text-align: left;
-}
-.text-justify {
-	text-align: justify;
 }
 .text-4xl {
 	font-size: 2.25rem;
@@ -1242,43 +1082,20 @@ video {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
-.text-base {
-	font-size: 1rem;
-	line-height: 1.5rem;
-}
-.text-5xl {
-	font-size: 3rem;
-	line-height: 1;
-}
 .font-semibold {
 	font-weight: 600;
 }
 .font-bold {
 	font-weight: 700;
 }
-.font-extrabold {
-	font-weight: 800;
-}
-.font-medium {
-	font-weight: 500;
-}
 .uppercase {
 	text-transform: uppercase;
-}
-.leading-tight {
-	line-height: 1.25;
 }
 .tracking-wider {
 	letter-spacing: 0.05em;
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
-}
-.tracking-wide {
-	letter-spacing: 0.025em;
-}
-.tracking-normal {
-	letter-spacing: 0em;
 }
 .text-blue-800 {
 	--tw-text-opacity: 1;
@@ -1364,10 +1181,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(52, 211, 153, var(--tw-text-opacity));
 }
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
 .shadow-lg {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1383,9 +1196,6 @@ video {
 .outline-none {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
-}
-.drop-shadow-lg {
-	--tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
 }
 .transition {
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -1450,18 +1260,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(165, 180, 252, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-500:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
-.hover\:bg-red-500:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-50:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .hover\:bg-opacity-100:hover {
 	--tw-bg-opacity: 1;
 }
@@ -1476,25 +1274,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
 }
-.hover\:text-gray-400:hover {
-	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-.focus\:outline-none:focus {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-@media (min-width: 640px) {
-
-	.sm\:rounded-lg {
-		border-radius: 0.5rem;
-	}
-
-	.sm\:text-base {
-		font-size: 1rem;
-		line-height: 1.5rem;
-	}
-}
 @media (min-width: 768px) {
 
 	.md\:left-28 {
@@ -1507,10 +1286,6 @@ video {
 
 	.md\:ml-16 {
 		margin-left: 4rem;
-	}
-
-	.md\:mb-4 {
-		margin-bottom: 1rem;
 	}
 
 	.md\:block {
@@ -1541,10 +1316,6 @@ video {
 		max-width: 64rem;
 	}
 
-	.md\:max-w-xl {
-		max-width: 36rem;
-	}
-
 	.md\:grid-cols-3 {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
@@ -1553,45 +1324,9 @@ video {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
-	.md\:grid-cols-4 {
-		grid-template-columns: repeat(4, minmax(0, 1fr));
-	}
-
-	.md\:flex-row {
-		flex-direction: row;
-	}
-
-	.md\:flex-col {
-		flex-direction: column;
-	}
-
-	.md\:items-start {
-		align-items: flex-start;
-	}
-
-	.md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
-		--tw-space-y-reverse: 0;
-		margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-		margin-bottom: calc(0px * var(--tw-space-y-reverse));
-	}
-
-	.md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-		--tw-space-x-reverse: 0;
-		margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-		margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-	}
-
 	.md\:bg-indigo-500 {
 		--tw-bg-opacity: 1;
 		background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
-	}
-
-	.md\:bg-transparent {
-		background-color: transparent;
-	}
-
-	.md\:bg-opacity-0 {
-		--tw-bg-opacity: 0;
 	}
 
 	.md\:p-2 {
@@ -1607,30 +1342,12 @@ video {
 		padding-right: 2.5rem;
 	}
 
-	.md\:py-1 {
-		padding-top: 0.25rem;
-		padding-bottom: 0.25rem;
-	}
-
-	.md\:py-12 {
-		padding-top: 3rem;
-		padding-bottom: 3rem;
-	}
-
 	.md\:pt-0 {
 		padding-top: 0px;
 	}
 
 	.md\:pb-4 {
 		padding-bottom: 1rem;
-	}
-
-	.md\:text-center {
-		text-align: center;
-	}
-
-	.md\:text-left {
-		text-align: left;
 	}
 
 	.md\:text-2xl {
@@ -1651,16 +1368,6 @@ video {
 	.md\:text-3xl {
 		font-size: 1.875rem;
 		line-height: 2.25rem;
-	}
-
-	.md\:text-xl {
-		font-size: 1.25rem;
-		line-height: 1.75rem;
-	}
-
-	.md\:text-white {
-		--tw-text-opacity: 1;
-		color: rgba(255, 255, 255, var(--tw-text-opacity));
 	}
 }
 @media (min-width: 1024px) {
@@ -1683,12 +1390,6 @@ video {
 
 	.lg\:justify-start {
 		justify-content: flex-start;
-	}
-
-	.lg\:space-y-9 > :not([hidden]) ~ :not([hidden]) {
-		--tw-space-y-reverse: 0;
-		margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
-		margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
 	}
 
 	.lg\:text-lg {
