--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -667,9 +667,6 @@ video {
 .mt-36 {
 	margin-top: 9rem;
 }
-.mt-3 {
-	margin-top: 0.75rem;
-}
 .flex {
 	display: flex;
 }
@@ -717,6 +714,9 @@ video {
 }
 .h-96 {
 	height: 24rem;
+}
+.h-72 {
+	height: 18rem;
 }
 .w-full {
 	width: 100%;
@@ -914,13 +914,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
-.bg-gray-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
 .bg-indigo-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
@@ -1040,9 +1040,6 @@ video {
 .pb-5 {
 	padding-bottom: 1.25rem;
 }
-.pt-3 {
-	padding-top: 0.75rem;
-}
 .pt-5 {
 	padding-top: 1.25rem;
 }
@@ -1054,6 +1051,9 @@ video {
 }
 .pr-2 {
 	padding-right: 0.5rem;
+}
+.pr-4 {
+	padding-right: 1rem;
 }
 .text-center {
 	text-align: center;
@@ -1103,6 +1103,9 @@ video {
 }
 .tracking-widest {
 	letter-spacing: 0.1em;
+}
+.tracking-wide {
+	letter-spacing: 0.025em;
 }
 .text-blue-800 {
 	--tw-text-opacity: 1;
@@ -1259,6 +1262,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
+.hover\:bg-indigo-400:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(129, 140, 248, var(--tw-bg-opacity));
+}
 .hover\:bg-gray-200:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
@@ -1280,6 +1287,10 @@ video {
 .hover\:text-blue-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
+.hover\:text-indigo-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
 
