add nusa penida package

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -958,6 +958,9 @@ video {
 .bg-cover {
 	background-size: cover;
 }
+.bg-fixed {
+	background-attachment: fixed;
+}
 .bg-center {
 	background-position: center;
 }
